# mainnet-observer

./: .gitignore
.github/workflows/: ci.yml
backend/: Cargo.toml
backend/benches/: stats.rs
backend/migrations/2026-02-26-000000_utxo-spend-age/: down.sql  up.sql
backend/migrations/2026-04-17-000000_coinbase-unclaimed/: down.sql  up.sql
backend/migrations/2026-04-20-000000_inscriptions/: down.sql  up.sql
backend/src/: db.rs  gen_csv.rs  lib.rs  main.rs  schema.rs  stats.rs
backend/tests/: minimal.rs
frontend/: config.toml
frontend/content/: missing-chart.md
frontend/content/charts/: block-chain-growth.md  block-chain-size.md  blocks-bip110-signaling.md  blocks-coinbase-unclaimed-cumulative.md  blocks-coinbase-unclaimed.md  fees-package-feerates.md  fees-per-day-btc.md  fees-per-day-usd.md  inputs-inscriptions.md  inputs-per-outputs.md  mining-pools-mining-bip110.md  mining-pools-mining-ephemeral-dust.md  payments-fees-per-payment-btc.md  payments-fees-per-payment-usd.md  transactions-bip69-compliant.md  transactions-coinbase-locktime-bip54.md  transactions-input-output-distribution.md  transactions-inscriptions-percentage.md  transactions-inscriptions.md  utxoset-spend-age.md
frontend/layouts/: index.html
frontend/layouts/_default/: baseof.html  index.json
frontend/layouts/charts/: single.html
frontend/layouts/partials/: search.html
frontend/static/js/: lib.js
frontend/static/js/charts/: block-chain-growth.js  block-chain-size.js  block-coinbase-amount.js  blocks-bip110-signaling.js  blocks-coinbase-unclaimed-cumulative.js  (+9 more)
