[package]
name = "mainnet-observer-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bitcoin = { version = "0.32", features = ["serde"] }
serde = "1.0.188"
diesel = { version = "= 2.1", features = ["sqlite", "64-column-tables"] }
diesel_migrations = "2.1"
chrono = "0.4.26"
rawtx-rs = "0.1.20"
rayon = "1.7.0"
minreq = { version = "2.12.0", features = ["json-using-serde"] }
log = "0.4.22"
env_logger = "0.11.3"
clap = { version = "4.5.11", features = ["derive"] }
bitcoin-pool-identification = "0.3.7"
statrs = "0.18.0"

[dev-dependencies]
corepc-node = { version = "0.12", features = ["30_2", "download"] }
criterion = { version = "0.5", features = ["html_reports"] }
rand = "0.9.0"
serde_json = "1.0"

[[bench]]
name = "stats"
harness = false
